--- a/index.html
+++ b/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="x-icon" href="./Images/WalkrDog.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WALKR - Home</title>
-    <link rel="stylesheet" href="Styles/styles.css">
+    <title>WALKR | Coming Soon!</title>
+    <link rel="stylesheet" type="text/css" href="../Styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Rates</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active"><img src="image1.jpg" alt="Image 1"></div>
-            <div class="carousel-item"><img src="image2.jpg" alt="Image 2"></div>
-            <div class="carousel-item"><img src="image3.jpg" alt="Image 3"></div>
+    <main class="main-content">
+        <img src="./Images/DogWalking.gif" alt="Dog Walking" class="dog-walking-gif">
+        <div class="information-box">
+            <h1>Welcome to WALKR!</h1>
+            <h2>Your Trusted Dog Walking Service</h2>
+            <p>My website is fetching some <b style="color:black;">exciting new features!</b> While I'm busy perfecting it, let me take care of all <b style="color:black;">your dog walking needs.</b> Feel free to <b style="color:black;">reach out to us</b> – I can't wait to meet your furry pal!</p>
+            <div class="location">
+                <h3>My Locations:</h3>
+                <div class="location-container">
+                    <div class="location-item">
+                        <i class="fa fa-map-marker"></i>
+                        <a href="https://www.google.com/maps/place/Edenvale" target="_blank">Edenvale</a>
+                    </div>
+                    <div class="location-item">
+                        <i class="fa fa-map-marker"></i>
+                        <a href="https://maps.app.goo.gl/7XYgPRGGXUPzPDLE8" target="_blank">Melrose</a>
+                    </div>
+                </div>
+            </div>
+            <h3>Contact Me:</h3>
+            <div class="contact-info">
+                <a class="contact-item" href="https://wa.me/27767944736">
+                    <i class="fa fa-whatsapp"></i>
+                    076 794 4736
+                </a>
+                <a class="contact-item" href="https://mail.google.com/mail/?view=cm&fs=1&to=chris@walkr.co.za">
+                    <i class="fa fa-envelope"></i>
+                    chris@walkr.co.za
+                </a>
+            </div>
         </div>
     </main>  
-</body> 
 </body>
 </html>
