Updates Locations & Layout For Build

--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <title>WALKR | Coming Soon!</title>
     <link rel="stylesheet" type="text/css" href="../Styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+
+    </style>
 </head>
 <body>
     <main class="main-content">
-        <img src="./Images/DogWalking.gif" alt="Dog Walking" class="dog-walking-gif">
         <div class="information-box">
             <h1>Welcome to WALKR!</h1>
             <h2>Your Trusted Dog Walking Service</h2>
-            <p>My website is fetching some <b style="color:black;">exciting new features!</b> While I'm busy perfecting it, let me take care of all <b style="color:black;">your dog walking needs.</b> Feel free to <b style="color:black;">reach out to us</b> – I can't wait to meet your furry pal!</p>
+            <p>Our website is fetching some <strong>exciting new features!</strong> While we're busy perfecting it, let us take care of all <strong>your dog walking needs.</strong> Feel free to <strong>reach out to us</strong> – we can't wait to meet your furry pal!</p>
             <div class="location">
-                <h3>My Locations:</h3>
+                <h3>Our Locations</h3>
                 <div class="location-container">
                     <div class="location-item">
                         <i class="fa fa-map-marker"></i>
@@ -24,22 +26,24 @@
                     </div>
                     <div class="location-item">
                         <i class="fa fa-map-marker"></i>
-                        <a href="https://maps.app.goo.gl/7XYgPRGGXUPzPDLE8" target="_blank">Melrose</a>
+                        <a href="https://maps.app.goo.gl/sUziZWz8vQA5thz77" target="_blank">The Neighbourhood</a>
                     </div>
                 </div>
             </div>
-            <h3>Contact Me:</h3>
             <div class="contact-info">
+                <h3>Contact Us</h3>
                 <a class="contact-item" href="https://wa.me/27767944736">
                     <i class="fa fa-whatsapp"></i>
                     076 794 4736
                 </a>
-                <a class="contact-item" href="https://mail.google.com/mail/?view=cm&fs=1&to=chris@walkr.co.za">
+                <a class="contact-item" href="mailto:chris@walkr.co.za">
                     <i class="fa fa-envelope"></i>
                     chris@walkr.co.za
                 </a>
             </div>
         </div>
+        <img src="./Images/DogWalking.gif" alt="Dog Walking" class="dog-walking-gif">
     </main>  
 </body>
+</html>
 </html>
