--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
             <h2>Your Trusted Dog Walking Service</h2>
             <p>Our website is fetching some <strong>exciting new features!</strong> While we're busy perfecting it, let us take care of all <strong>your dog walking needs.</strong> Feel free to <strong>reach out to us</strong> – we can't wait to meet your furry pal!</p>
             <div class="location">
-                <h3>Our Locations</h3>
+                <h3>Our Location</h3>
                 <div class="location-container">
-                    <div class="location-item">
-                        <i class="fa fa-map-marker"></i>
-                        <a href="https://www.google.com/maps/place/Edenvale" target="_blank">Edenvale</a>
-                    </div>
+                  
                     <div class="location-item">
                         <i class="fa fa-map-marker"></i>
                         <a href="https://maps.app.goo.gl/sUziZWz8vQA5thz77" target="_blank">The Neighbourhood</a>
