--- a/index.html
+++ b/index.html
@@ -16,11 +16,48 @@
         }
 
         header {
-            background-color: #4caf50;
+            position: relative;
+            width: 100%;
+            height: 400px;
+            overflow: hidden;
+        }
+
+        header video {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transform: translate(-50%, -50%);
+            opacity: 0;
+            animation: fadeInOut 20s infinite;
+        }
+
+        @keyframes fadeInOut {
+            0% { opacity: 0; }
+            10% { opacity: 1; }
+            90% { opacity: 1; }
+            100% { opacity: 0; }
+        }
+
+        header h1, header p {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             color: #fff;
-            padding: 20px;
             text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        header h1 {
+            font-size: 3em;
+            margin-bottom: 10px;
+        }
+
+        header p {
+            font-size: 1.5em;
         }
 
         nav ul {
@@ -368,6 +405,7 @@
 </head>
 <body>
     <header>
+        <video src="Videos/banner.mp4" autoplay muted loop></video>
         <h1>Walkr</h1>
         <p>Caring for your furry friends, one walk at a time.</p>
     </header>
