--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         header {
             position: relative;
             width: 100%;
-            height: 400px;
+            height: 300px;
             overflow: hidden;
         }
 
@@ -31,33 +31,42 @@
             object-fit: cover;
             transform: translate(-50%, -50%);
             opacity: 0;
-            animation: fadeInOut 20s infinite;
+            animation: fadeInOut 8s infinite;
         }
 
         @keyframes fadeInOut {
-            0% { opacity: 0; }
+            0% { opacity: 0; background-color: black; }
+            20% { opacity: 1; }
+            80% { opacity: 1; }
+            100% { opacity: 0; background-color: black; }
+        }
             10% { opacity: 1; }
             90% { opacity: 1; }
             100% { opacity: 0; }
         }
 
-        header h1, header p {
+        header h1 {
             position: absolute;
-            top: 50%;
+            top: 40%;
             left: 50%;
             transform: translate(-50%, -50%);
             color: #fff;
             text-align: center;
             z-index: 1;
-        }
-
-        header h1 {
             font-size: 3em;
-            margin-bottom: 10px;
+            margin-bottom: 0;
         }
 
         header p {
+            position: absolute;
+            top: 55%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #fff;
+            text-align: center;
+            z-index: 1;
             font-size: 1.5em;
+            margin-top: 0;
         }
 
         nav ul {
@@ -411,7 +420,7 @@
             Your browser does not support HTML video.
         </video>
         <h1>Walkr</h1>
-        <p>Caring for your furry friends, one walk at a time.</p>
+        <p>Pet Care in The Neighbourhood Estate</p>
     </header>
 
     <nav>
