--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
         }
 
         header {
-            position: relative;
+            position: fixed;
             width: 100%;
-            height: 300px;
+            height: 100vh;
             overflow: hidden;
+            top: 0;
+            left: 0;
+            z-index: -1;
         }
 
         header video {
@@ -30,12 +33,15 @@
             height: 100%;
             object-fit: cover;
             transform: translate(-50%, -50%);
-            opacity: 0;
-            animation: fadeInOut 8s infinite;
+            z-index: -1;
         }
 
         @keyframes fadeInOut {
             0% { opacity: 0; background-color: black; }
+            20% { opacity: 1; }
+            80% { opacity: 1; }
+            100% { opacity: 0; background-color: black; }
+        }
             20% { opacity: 1; }
             80% { opacity: 1; }
             100% { opacity: 0; background-color: black; }
