--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <title>Walkr - Dog Walking & House Sitting</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        nav.sticky {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            z-index: 1000;
-        }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
@@ -22,13 +16,10 @@
         }
 
         header {
-            position: fixed;
+            position: relative;
             width: 100%;
-            height: 100vh;
+            height: 400px;
             overflow: hidden;
-            top: 0;
-            left: 0;
-            z-index: -1;
         }
 
         header video {
@@ -39,49 +30,34 @@
             height: 100%;
             object-fit: cover;
             transform: translate(-50%, -50%);
-            z-index: -1;
+            opacity: 0;
+            animation: fadeInOut 20s infinite;
         }
 
         @keyframes fadeInOut {
-            0% { opacity: 0; background-color: black; }
-            20% { opacity: 1; }
-            80% { opacity: 1; }
-            100% { opacity: 0; background-color: black; }
-        }20% { opacity: 1; }
-            80% { opacity: 1; }
-            100% { opacity: 0; background-color: black; }
-        }
-            20% { opacity: 1; }
-            80% { opacity: 1; }
-            100% { opacity: 0; background-color: black; }
-        }
+            0% { opacity: 0; }
             10% { opacity: 1; }
             90% { opacity: 1; }
             100% { opacity: 0; }
         }
 
-        header h1 {
+        header h1, header p {
             position: absolute;
-            top: 40%;
+            top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             color: #fff;
             text-align: center;
             z-index: 1;
+        }
+
+        header h1 {
             font-size: 3em;
-            margin-bottom: 0;
+            margin-bottom: 10px;
         }
 
         header p {
-            position: absolute;
-            top: 55%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: #fff;
-            text-align: center;
-            z-index: 1;
             font-size: 1.5em;
-            margin-top: 0;
         }
 
         nav ul {
@@ -91,9 +67,6 @@
             justify-content: center;
             background-color: #333;
             margin: 0;
-            position: relative;
-            top: 50%;
-            transform: translateY(-50%);
         }
 
         nav ul li {
@@ -106,12 +79,6 @@
             padding: 14px 20px;
             display: block;
             transition: background-color 0.3s ease;
-        }
-
-        nav ul li a.logo {
-            font-weight: bold;
-            font-size: 1.5em;
-            color: white;
         }
 
         nav ul li a:hover {
@@ -415,14 +382,6 @@
     </style>
     <script>
         window.addEventListener("DOMContentLoaded", function() {
-            const nav = document.querySelector('nav');
-            window.addEventListener('scroll', function() {
-                if (window.scrollY > 0) {
-                    nav.classList.add('sticky');
-                } else {
-                    nav.classList.remove('sticky');
-                }
-            });
             const form = document.querySelector("#booking form");
             form.addEventListener("submit", async function(event) {
                 event.preventDefault();
@@ -445,11 +404,14 @@
     </script>
 </head>
 <body>
-    
+    <header>
+        <video src="Videos/banner.mp4" autoplay muted loop></video>
+        <h1>Walkr</h1>
+        <p>Caring for your furry friends, one walk at a time.</p>
+    </header>
 
     <nav>
         <ul>
-            <li><a href="#home" class="logo">Walkr</a></li>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Us</a></li>
             <li><a href="#services">Services</a></li>
