--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Walkr - Dog Walking & House Sitting</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        nav.sticky {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+        }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
@@ -16,11 +22,46 @@
         }
 
         header {
-            background-color: #4caf50;
+            position: fixed;
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
+            top: 0;
+            left: 0;
+        }
+
+        header video {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transform: translate(-50%, -50%);
+        }
+
+        header h1 {
+            position: absolute;
+            top: 40%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             color: #fff;
-            padding: 20px;
             text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+            font-size: 3em;
+            margin-bottom: 0;
+        }
+
+        header p {
+            position: absolute;
+            top: 55%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #fff;
+            text-align: center;
+            z-index: 1;
+            font-size: 1.5em;
+            margin-top: 0;
         }
 
         nav ul {
@@ -42,6 +83,12 @@
             padding: 14px 20px;
             display: block;
             transition: background-color 0.3s ease;
+        }
+
+        nav ul li a.logo {
+            font-weight: bold;
+            font-size: 1.5em;
+            color: white;
         }
 
         nav ul li a:hover {
@@ -345,7 +392,15 @@
     </style>
     <script>
         window.addEventListener("DOMContentLoaded", function() {
-            const form = document.querySelector("#booking form");
+            const nav = document.querySelector('nav');
+            window.addEventListener('scroll', function() {
+                if (window.scrollY > 0) {
+                    nav.classList.add('sticky');
+                } else {
+                    nav.classList.remove('sticky');
+                }
+            });
+            const form = document.querySelector("#booking-form");
             form.addEventListener("submit", async function(event) {
                 event.preventDefault();
                 const formData = new FormData(form);
@@ -367,13 +422,10 @@
     </script>
 </head>
 <body>
-    <header>
-        <h1>Walkr</h1>
-        <p>Caring for your furry friends, one walk at a time.</p>
-    </header>
-
+    
     <nav>
         <ul>
+            <li><a href="#home" class="logo">Walkr</a></li>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Us</a></li>
             <li><a href="#services">Services</a></li>
